# ProgettoAlgoritmi

./: CMakeLists.txt  Configuration.h  InputMatrix.cpp  InputMatrix.h  Logger.h  MBaseSolver.cpp  MBaseSolver.h  MBaseSolverV2.cpp  MBaseSolverV2.h  MBaseSolverV3.cpp  MBaseSolverV3.h  MBaseSolverV4.cpp  MBaseSolverV4.h  MBaseSolverV5.cpp  MBaseSolverV5.h  MBaseSolverV6.cpp  MBaseSolverV6.h  Memory.h  MhsSort.h  MinimumHittingSetSolver.h  PreElaborator.cpp  PreElaborator.h  README  ResultPrinter.cpp  ResultPrinter.h  Utility.h  clang-format  clang-tidy  configuration.properties  main.cpp
